manifests/hugo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugo
spec:
  type: ClusterIP
  selector:
    app: hugo
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
